@@ -1,10 +1,10 @@
 #!/usr/bin/perl
 
-#	Migration between gconf data version 3 to 4
+#   Migration between gconf data version 3 to 4
 #
 #
 #   This migration script just tries to add a rule to allow outcoming
-#   connections by eBox.
+#   connections by eBox and also connections from internal to external.
 #
 #   There's no migration from previous data as we only need to add a rule.
 #
@@ -30,7 +30,18 @@ use Error qw(:try);
 sub runGConf
 {
     my ($self) = @_;
-    my $fw = EBox::Model::ModelManager::instance()->model('EBoxOutputRuleTable');
+
+    $self->_allowOutput();
+    $self->_allowInternal();
+
+}
+
+sub _allowOutput
+{
+    my ($self) = @_;
+
+    my $fw =
+        EBox::Model::ModelManager::instance()->model('EBoxOutputRuleTable');
     my $service = EBox::Model::ModelManager::instance()->model('ServiceTable');
     my $anyRow = $service->findValue(name => 'any');
     unless (defined($anyRow)) {
@@ -39,6 +50,27 @@ sub runGConf
     }
     $fw->add(
             decision => 'accept',
+            destination => { destination_any => undef },
+            description => '',
+            service => $anyRow->id()
+            );
+}
+
+sub _allowInternal
+{
+    my ($self) = @_;
+
+    my $fw =
+        EBox::Model::ModelManager::instance()->model('ToInternetRuleTable');
+    my $service = EBox::Model::ModelManager::instance()->model('ServiceTable');
+    my $anyRow = $service->findValue(name => 'any');
+    unless (defined($anyRow)) {
+        EBox::warn('There must be something broken as I could not find "any" service');
+        return;
+    }
+    $fw->add(
+            decision => 'accept',
+            source => { source_any => undef },
             destination => { destination_any => undef },
             description => '',
             service => $anyRow->id()
