@@ -1,3 +1,6 @@
+HEAD
+	+ Add an allow rule by default from internal
+	  networks to internet
 1.3.11
 	+ Added report support
 	+ Add description field for redirects
